<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cc.gnaixx.echo.LocalActivity">

    <EditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_port_local">
        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/et_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_msg"/>

    <Button
        android:id="@+id/btn_start_tcp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_client_tcp"/>

    <Button
        android:id="@+id/btn_start_udp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_client_udp"/>

    <ScrollView
        android:id="@+id/sv_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>
