<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cc.gnaixx.echo.ServerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="4"
            android:hint="@string/edit_port"
            android:inputType="number">
            <requestFocus/>
        </TextView>

        <EditText
            android:id="@+id/et_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_port"
            android:inputType="number">
            <requestFocus/>
        </EditText>


    </LinearLayout>
    <Button
        android:id="@+id/btn_start_tcp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_tcp_server"/>

    <Button
        android:id="@+id/btn_start_udp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_udp_server"/>

    <ScrollView
        android:id="@+id/sv_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>
